# BoolCalculator

./: .gitignore  CMakeLists.txt
include/: cantor_abbreviated_normal_form.hpp  cantor_normal_form.hpp  cantor_perfect_normal_form.hpp  constituent.hpp  dead_end_cantor_normal_forms.hpp  gluing_table.hpp  output.hpp  quine_core.hpp  quine_matrix.hpp  reverse_polish_notation.hpp  truth_table.hpp
sources/: CMakeLists.txt  cantor_abbreviated_normal_form.cpp  cantor_normal_form.cpp  cantor_perfect_normal_form.cpp  constituent.cpp  dead_end_cantor_normal_forms.cpp  gluing_table.cpp  main.c  main.cpp  output.cpp  quine_core.cpp  quine_matrix.cpp  reverse_polish_notation.cpp  source.cpp  truth_table.cpp
tests/: tests.h
